@@ -4940,6 +4940,8 @@ name|destServerName
 argument_list|)
 argument_list|)
 expr_stmt|;
+try|try
+block|{
 if|if
 condition|(
 name|this
@@ -5041,6 +5043,38 @@ argument_list|,
 name|dest
 argument_list|)
 expr_stmt|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|IOException
+name|ioe
+parameter_list|)
+block|{
+name|UnknownRegionException
+name|ure
+init|=
+operator|new
+name|UnknownRegionException
+argument_list|(
+name|Bytes
+operator|.
+name|toStringBinary
+argument_list|(
+name|encodedRegionName
+argument_list|)
+argument_list|)
+decl_stmt|;
+name|ure
+operator|.
+name|initCause
+argument_list|(
+name|ioe
+argument_list|)
+expr_stmt|;
+throw|throw
+name|ure
+throw|;
 block|}
 block|}
 block|}
